[gd_scene load_steps=23 format=3 uid="uid://c5u66pg5iv4md"]

[ext_resource type="Script" uid="uid://w8n7nk2ppnpd" path="res://Scenes/bezier_test_curves.gd" id="1_gpast"]
[ext_resource type="Texture2D" uid="uid://dsvxjtj2ay2mx" path="res://Resources/Arrows/NoteLeft.png" id="2_4a0ek"]
[ext_resource type="AudioStream" uid="uid://c7mvjhv418mpb" path="res://Resources/Songs/Heartache.mp3" id="2_f1wgb"]
[ext_resource type="Texture2D" uid="uid://dha00vxwgm1wr" path="res://Resources/Arrows/NoteLeftPress.png" id="3_f1wgb"]
[ext_resource type="PackedScene" uid="uid://da55mf3b65c15" path="res://Scenes/Visualizer.tscn" id="4_2hulq"]
[ext_resource type="Texture2D" uid="uid://ct36npe78bfsk" path="res://Resources/misc/cover_mask.png" id="5_qauvb"]
[ext_resource type="Texture2D" uid="uid://c3aa08xepf2on" path="res://Resources/misc/insanity_label.png" id="6_1isiv"]
[ext_resource type="Texture2D" uid="uid://b1c78vvnpvxgb" path="res://Resources/misc/shadow.png" id="7_tkwsf"]
[ext_resource type="Texture2D" uid="uid://bwtheoipmlbe" path="res://Resources/BeatzRoundCover.png" id="8_jwaot"]
[ext_resource type="Texture2D" uid="uid://byed1ljwunwsj" path="res://Resources/defaultBG.png" id="9_n48al"]
[ext_resource type="PackedScene" uid="uid://b5t0lioff7gvs" path="res://Scenes/fps.tscn" id="10_wknh2"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sshp1"]

[sub_resource type="Animation" id="Animation_hv8tc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_cover_anim/bg_cover:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3.5, 3.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg_cover_anim/bg_cover:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.312161, 0.312161, 0.312161, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Play:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-127, 300)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionRect:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("cover_anim/circlemask:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 640)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("cover_anim/circlemask/cover:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("back:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-910, -490)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("cover_anim/circlemask/difficulty_label:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.22, 0.22)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("cover_anim/circlemask/difficulty_label:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("cover_anim/circlemask:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.6, 0.6)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("loading_text:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("vis_anim/Visualizer:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_82m22"]
resource_name = "load_song"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_cover_anim/bg_cover:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.133972, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(3.5, 3.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg_cover_anim/bg_cover:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.369436, 0.369436, 0.369436, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Play:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667, 1),
"transitions": PackedFloat32Array(0.133972, 1),
"update": 0,
"values": [Vector2(-127, 640), Vector2(-127, 300)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionRect:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("cover_anim/circlemask:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.333333, 1),
"transitions": PackedFloat32Array(0.217638, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.6, 0.6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("cover_anim/circlemask:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 640)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("cover_anim/circlemask/difficulty_label:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.22, 0.22)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("loading_text:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("back:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(0.129408, 1),
"update": 0,
"values": [Vector2(-1149.99, -490), Vector2(-910, -490)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("vis_anim/Visualizer:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.333333, 1),
"transitions": PackedFloat32Array(0.353553, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_272fv"]
resource_name = "play_song"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_cover_anim/bg_cover:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(5.85632, 1),
"update": 0,
"values": [Vector2(3.5, 3.5), Vector2(5.5, 5.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.333333, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Play:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(0.34151, 1),
"update": 0,
"values": [Vector2(-127, 300), Vector2(-127, 550)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Title:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(3.605, 1),
"update": 0,
"values": [Vector2(0, -458), Vector2(0, -650)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Artist:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0666667, 0.8),
"transitions": PackedFloat32Array(3.605, 1),
"update": 0,
"values": [Vector2(0, -370), Vector2(0, -650)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("cover_anim/circlemask:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.633333),
"transitions": PackedFloat32Array(0.353553, 5.46416, 1),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(0.5, 0.5), Vector2(3, 3)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("back:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(0.129408, 1),
"update": 0,
"values": [Vector2(-910, -490), Vector2(-1150, -490)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("cover_anim/circlemask/difficulty_label:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(7.21, 1),
"update": 0,
"values": [0.0, -0.785398]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("cover_anim/circlemask/difficulty_label:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.233333, 0.566667),
"transitions": PackedFloat32Array(3.86374, 1),
"update": 0,
"values": [Vector2(0.22, 0.22), Vector2(0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("loading_text:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("vis_anim/Visualizer:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.733333),
"transitions": PackedFloat32Array(0.353553, 5.09824, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.83, 0.83), Vector2(17, 17)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dar74"]
_data = {
&"RESET": SubResource("Animation_hv8tc"),
&"load_song": SubResource("Animation_82m22"),
&"play_song": SubResource("Animation_272fv")
}

[sub_resource type="Animation" id="Animation_dar74"]
length = 0.001

[sub_resource type="Animation" id="Animation_rjvkx"]
resource_name = "new_animation"
length = 30.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_cover_anim/bg_cover:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_272fv"]
_data = {
&"RESET": SubResource("Animation_dar74"),
&"spin": SubResource("Animation_rjvkx")
}

[sub_resource type="Animation" id="Animation_bkvc6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vis_anim/Visualizer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cue5o"]
resource_name = "vis_spin"
length = 90.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vis_anim/Visualizer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 90),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dh6jl"]
_data = {
&"RESET": SubResource("Animation_bkvc6"),
&"vis_spin": SubResource("Animation_cue5o")
}

[node name="bezier_test_curves" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpast")

[node name="song" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_f1wgb")
bus = &"Song"

[node name="back" type="TextureButton" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -910.0
offset_top = -490.0
offset_right = -746.0
offset_bottom = -326.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(82, 82)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_4a0ek")
texture_pressed = ExtResource("3_f1wgb")

[node name="Play" type="Button" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = 300.0
offset_right = 125.0
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 75
text = "Play!"
metadata/pos = -127.3

[node name="Title" type="RichTextLabel" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -500.0
offset_right = 78.5
offset_bottom = -397.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(78.5, 51.5)
mouse_filter = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 75
text = "Title"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Artist" type="RichTextLabel" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -390.0
offset_right = 79.5
offset_bottom = -307.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(268, 41.5)
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 50
text = "Artist"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="vis_anim" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Visualizer" parent="vis_anim" instance=ExtResource("4_2hulq")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mode = "Left and Right"
reaction = "None"
custom_colors = true
bar_count = 75
exponential_bounce = true
exponent_strength = 2.0
extra_exponential = true
use_lerp = true
decay_speed = 175.0
lerp_strength = 13.5
HEIGHT = 55

[node name="cover_anim" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="circlemask" type="TextureRect" parent="cover_anim"]
clip_children = 2
texture_filter = 6
material = SubResource("CanvasItemMaterial_sshp1")
layout_mode = 0
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(320, 320)
mouse_filter = 2
texture = ExtResource("5_qauvb")
expand_mode = 1

[node name="difficulty_label" type="TextureRect" parent="cover_anim/circlemask"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -848.333
offset_right = 960.0
offset_bottom = 231.667
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.22, 0.22)
pivot_offset = Vector2(960, 540)
mouse_filter = 2
texture = ExtResource("6_1isiv")
expand_mode = 1

[node name="shadow" type="TextureRect" parent="cover_anim/circlemask/difficulty_label"]
modulate = Color(0, 0, 0, 0.25098)
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.2, 1)
pivot_offset = Vector2(320, 320)
mouse_filter = 2
texture = ExtResource("7_tkwsf")
expand_mode = 1

[node name="cover" type="TextureRect" parent="cover_anim/circlemask"]
clip_children = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 320)
mouse_filter = 2
texture = ExtResource("8_jwaot")
expand_mode = 1

[node name="shadow" type="TextureRect" parent="cover_anim/circlemask/cover"]
modulate = Color(0, 0, 0, 0.407843)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.4, 2.4)
pivot_offset = Vector2(320, 320)
mouse_filter = 2
texture = ExtResource("7_tkwsf")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dar74")
}
autoplay = "load_song"

[node name="bg_cover_anim" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="bg_cover" type="TextureRect" parent="bg_cover_anim"]
self_modulate = Color(0.312161, 0.312161, 0.312161, 1)
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -340.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.5, 3.5)
pivot_offset = Vector2(320, 320)
mouse_filter = 2
texture = ExtResource("8_jwaot")
expand_mode = 1

[node name="selected_album" type="Control" parent="."]
z_index = -8
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="background" type="TextureRect" parent="selected_album"]
z_index = -3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_n48al")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_272fv")
}
autoplay = "spin"

[node name="TransitionRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
top_level = true
z_index = 5
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_right = 960.0
offset_bottom = 1080.0
grow_horizontal = 2
pivot_offset = Vector2(960, 540)
mouse_filter = 2
texture = ExtResource("9_n48al")

[node name="fps" parent="." instance=ExtResource("10_wknh2")]
z_index = 10
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -13.5
offset_top = 498.0
offset_right = 13.5
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="loading_text" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0)
top_level = true
z_index = 6
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.5
offset_top = 980.0
offset_right = 104.5
offset_bottom = 1043.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/outline_size = 19
theme_override_font_sizes/normal_font_size = 45
text = "Loading..."
fit_content = true
scroll_active = false
autowrap_mode = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dh6jl")
}
autoplay = "vis_spin"
